<resources>
    <string name="app_name">ValenBike</string>
    <string name="jcdecaux_api">826d3b8a1da38c94e235e378d86abdb4802e18f5</string>
    <string name="bottom_menu_map">Mapa</string>
    <string name="bottom_menu_stations">Estaciones</string>
    <string name="bottom_menu_history">Historial</string>
    <string name="bottom_menu_information">Información</string>
    <string name="cardview_functioning_title1">Para obtener una bicicleta</string>
    <string name="cardview_functioning_body1">Sencillez y rapidez definen al funcionamiento de Valenbisi. Para hacer uso de una bicicleta, basta con aproximar al Terminal de Acceso al servicio la tarjeta de Abono de Larga Duración, introducir el código PIN y retirar la bicicleta elegida.
        \n\nPara abonados de corta duración, una vez obtenido en el abono en los Terminales habilitados al efecto, bastará con teclear el código numérico asignado, seleccionar la bicicleta que queramos y comenzar a hacer uso de ella.
        \n\nPara el primer uso de la tarjeta de Abono Asociado, bastará con situar su tarjeta sobre el lector y marcar el código facilitado en la página web de Valenbisi (www.valenbisi.es)
        \n\nPor seguridad, desde el terminal hasta el punto de anclaje de la bicicleta, el usuario dispone de sesenta segundos de tiempo para retirar la bicicleta.
        \n\n¡Disfrute de un buen paseo!</string>
    <string name="cardview_functioning_title2">Para devolver la bicicleta</string>
    <string name="cardview_functioning_body2">Una vez finalizado el trayecto sólo es necesario aproximar la bicicleta hasta el punto de anclaje disponible.
        \n\nPara facilitar a los usuarios que puedan verificar que su bicicleta quede bien fijada en el punto de anclaje, el sistema emitirá una señal sonora una vez realizado el anclaje de la bici, que nos indicará que se ha devuelto correctamente.
        \n\n<b>Cuidado</b>: Si la bicicleta queda mal enganchada, el sistema seguirá contando como si continuase su uso.
        \n\nAnte cualquier problema al anclar la bicicleta, puede contactar con nosotros en el 900 900 722. </string>

    <string name="cardview_faq_title1">Tengo un abono de Corta Duración ¿Cuando me devuelven la fianza?</string>
    <string name="cardview_faq_body1">Una vez que el usuario tiene el abono caducado, en 24–48 horas damos orden a su entidad bancaria para que desbloquee su fianza. Dependiendo de su entidad, se le reembolsará de 1 a 21 días.</string>
    <string name="cardview_faq_title2">¿Es normal que me aparezca realizado un cargo sin tener aún la tarjeta Valenbisi Larga Duración?</string>
    <string name="cardview_faq_body2">Sí, le informamos que la primera gestión es el cargo de los 29.21 Euros; una vez aceptadas por su entidad, se gestiona su tarjeta Valenbisi y se le envía por correo la dirección facilitada en el formulario de alta.</string>
    <string name="cardview_faq_title3">Quiero devolver una bicicleta y la estación está llena</string>
    <string name="cardview_faq_body3">En ese caso, debe pasar su tarjeta de usuario por delante del Lector de Tarjetas, el sistema automáticamente le reconocerá y le dará 15 minutos extra de tiempo gratuito, para que pueda desplazarse a cualquiera de las estaciones más próximas. Asimismo, en el Terminal de Acceso al Servicio podrá localizar las estaciones más cercanas, así como la situación en la que se encuentran (número de bicicletas disponibles y espacios de anclaje libres).</string>
    <string name="cardview_faq_title4">¿Donde puedo obtener un mapa actualizado de las estaciones de bicicletas?</string>
    <string name="cardview_faq_body4">Actualmente, puede ver todas las estaciones en funcionamiento en el mapa de la página web www.valenbisi.es. En cualquiera de las estaciones, en el Terminal de Acceso al Servicio, podrá localizar en un mapa las estaciones más próximas, así como su situación en tiempo real (bicicletas disponibles y espacios libres).</string>
    <string name="cardview_faq_title5">¿Mi tarjeta de larga duración está bloqueada porque he introducido mal el código PIN, como puedo desbloquearla?</string>
    <string name="cardview_faq_body5">Debe ponerse en contacto con nosotros en el 900 900 722 o enviarnos un e-mail desde la página web www.valenbisi.es, indicándonos su nº de abonado, DNI, correo electrónico (el mismo que escribió en su solicitud) y el PIN que introdujo para confirmar sus datos, por política de seguridad.</string>
    <string name="cardview_faq_title6">¿Cuánto tiempo se tarda en gestionar una solicitud de abono?</string>
    <string name="cardview_faq_body6">Una vez recibida su solicitud, le informamos que el plazo estimado para la gestión y envío de su tarjeta oscila entre 15–20 días.</string>
    <string name="cardview_faq_title7">He perdido mi tarjeta Valenbisi, ¿me podrían enviar un duplicado?</string>
    <string name="cardview_faq_body7">Debe ponerse en contacto con nosotros en el 900 900 722, o bien, solicitarlo desde el apartado "Mi cuenta" de la página web, opción "Deseo solicitar un nuevo abono". La tarjeta tarda aproximadamente 20 días en llegar a su domicilio. También tiene la opción de acudir a nuestra oficina de atención al cliente en la GALERIA COMERCIAL SAPIRIS, calle Asturias, 34, donde se le entregará el duplicado en el momento.
        \n\nTodas las opciones suponen un coste de 5 Euros que deberá abonar en su cuenta Valenbisi.</string>
    <string name="cardview_faq_title8">Mi tarjeta está bloqueada por que me aparece que tengo una bici en curso ¿qué debo hacer?</string>
    <string name="cardview_faq_body8">Debe ponerse en contacto con nosotros en el 900 900 722 o cumplimentar el formulario online que aparece en la página web, apartado “CONTACTO” . Es necesario que nos confirme el número de estación dónde dejó anclada la bicicleta; y si es posible, el nº de anclaje y el nº de bici.</string>
    <string name="cardview_faq_title9">Para actualizar sus datos bancarios</string>
    <string name="cardview_faq_body9">Para actualizar sus datos bancarios deberá acceder al apartado "Mi Cuenta" de la página web www.valenbisi.es, e introducir los datos de su tarjeta de crédito/debito actualizados. La actualización de los datos bancarios, si no tiene saldo pendiente de cobro, generara un cargo de 1 euro que será reintegrado inmediatamente en su cuenta de abonado. Por el contrario, si tiene saldo pendiente de abonar, será cargado durante la transacción de actualización de los datos, quedando su cuenta regularizada en el sistema.</string>

    <string name="cardview_contact_title1">Mi cuenta presenta un trayecto con un cargo anormal o mi cuenta tiene registrada por error una bicicleta en uso</string>
    <string name="cardview_contact_body1">El coste de uno de mis trayectos me parece excesivo. Visite la página web <u>cas.valenbisi.es</u> para más información</string>
    <string name="cardview_contact_title2">SERVICIO DE ATENCIÓN TELEFONICA: 900 900 722</string>
    <string name="cardview_contact_body2">Desde el 1 de Septiembre hasta el 30 de Junio , el horario del servicio de atención telefónica es, de lunes a viernes, de 8:30 a 22:00 horas. Sábados, Domingos y Festivos Nacionales, el horario es de 10:00 a 21:00 horas.
        \n\nDesde el 1 de Julio  hasta el 31 de Agosto, el horario del servicio de atención telefónica es, de lunes a viernes, de 9:00 a 22:00 horas. Sábados, Domingos y Festivos Nacionales, el horario es de 10:00 a 21:00 horas</string>
    <string name="cardview_contact_title3">Oficina de Atención al Usuario de Valenbisi</string>
    <string name="cardview_contact_body3">Si necesita información adicional sobre Valenbisi, acérquese a visitarnos. Nos encontrará en la GALERIA COMERCIAL SAPIRIS, calle Asturias, 34.</string>
    <string name="cardview_contact_title4">Plano de ubicación Oficina Atención al Cliente</string>
    <string name="cardview_contact_body4">Nuestro horario es de lunes a viernes, de 10:00 a 14:00 horas y de 16:30 a 20:00 horas. Sabados de 10:00 a 14:00 horas.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_location_out_bounds">Tu localización está fuera de los límites de uso</string>
    <string name="map_marker_out_bounds">Marcador fuera de los límites de uso</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_type_terrain">Terreno</string>
    <string name="map_type_traffic">Tráfico</string>
    <string name="map_type_satellite">Satélite</string>
    <string name="map_search_hint">Buscar</string>
    <string name="permissions_not_granted">No podrá ver su localización porque no ha dado permisos</string>
    <string name="internet_required_connexion">Es necesario conexión a internet</string>
    <string name="internet_lost_connexion">No podrás acceder a todas las funciones sin conexión a internet</string>
    <string name="directions_no_gps_location">Tiene que visualizar su posicion en el mapa para poder acceder a su ubicación</string>
    <string name="directions_no_source_destination">Introduzca los puntos de origen y destino</string>
    <string name="name_station_fragment">Nombre: </string>
    <string name="directions_route_not_available">No se ha encontrado una ruta</string>
    <string name="adress_station_fragment">Direccion: </string>
    <string name="bikes_station_fragment">Bicicletas disponibles: </string>
    <string name="frees_station_fragment">Huecos disponibles: </string>
    <string name="fav_station_fragment">Favorita</string>
    <string name="notifybike_station_fragment">Notificar si hay bicicleta disponible</string>
    <string name="notifyfree_station_fragment">Notificar si hay hueco disponible</string>
    <string name="dialog_loading_information">Cargando información…</string>
    <string name="sheet_station_bikes">Bicicletas:</string>
    <string name="sheet_station_stands">Sitios libres:</string>
    <string name="sheet_station_last_update">Última actualización hace:</string>
    <string name="sheet_station_hours">horas</string>
    <string name="sheet_station_directions">Como llegar</string>
    <string name="sheet_station_closed">Cerrada temporalmente</string>
    <string name="row_station_closed">Cerrada\ntemporalmente</string>
    <string name="sheet_indication_duration"> min</string>
    <string name="sheet_indication_distance"> km</string>
    <string name="directions_source">Origen</string>
    <string name="directions_destination">Destino</string>
    <string name="filter_menu_station">Filtrar</string>
    <string name="fav_filter_menu_station">Estaciones favoritas</string>
    <string name="notify_filter_menu_station">Estaciones con avisos</string>
    <string name="selection_filter_menu_station">Filtrar por…</string>
    <string name="alert_title">No tienes conexión a Internet</string>
    <string name="alert_message">Por favor, activa Wifi o datos para tener acceso a Internet y poder utilizar correctamente la aplicación</string>
    <string name="alert_try_again">Volver a intentar</string>
    <string name="alert_close">Cerrar aplicación</string>
    <string name="channel_name">Canal1</string>
    <string name="channel_description">Canal para notificaciones de bicis</string>
    <string name="places_error_search">No se han podido cargar resultados</string>
    <string name="filter_stations_alphabetically">Alfabéticamente</string>
    <string name="filter_stations_number">Numéricamente</string>
    <string name="filter_stations_favourite">Favoritas</string>
    <string name="search_word">Buscar</string>
    <string name="filter_word">Filtrar</string>
    <string name="dont_have_favourite_stations">No tienes estaciones favoritas</string>
    <string name="route_delete_database">La ruta ha sido eliminada de la base de datos</string>
    <string name="route_added_database">La ruta ha sido añadida a la base de datos</string>
    <string name="dont_have_history_routes">No tienes rutas en el historial</string>
</resources>
