<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        android:background="@drawable/dividir"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/indicationsCardMode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toTopOf="@+id/indicationsExpandableLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/indicationsCardAddress"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintEnd_toStartOf="@+id/indicationsCardDistance"
                app:layout_constraintStart_toEndOf="@+id/indicationsCardMode"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/indicationsCardDuration"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/quantum_googgreen"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/sheet_indication_duration"
                android:textColor="@color/quantum_googgreen"
                app:layout_constraintEnd_toStartOf="@+id/indicationsCardArrow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/indicationsCardDistance"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/indicationsCardDuration" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/sheet_indication_distance"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/indicationsCardArrow"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/indicationsCardArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:padding="16dp"
                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/indicationsExpandableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/indicationsCardArrow">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/specifiedIndicationsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>